@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.advanced.emulator.launcher" name="Advanced Emulator Launcher" version="0.9.0" provider-name="Wintermute0110">
+<addon id="plugin.program.advanced.emulator.launcher" name="Advanced Emulator Launcher" version="0.9.1" provider-name="Wintermute0110">
   <requires>
     <!-- 2.24.0  Jarvis 16.x 
          2.25.0  Krypton 17.x 
       -->
     <import addon="xbmc.python" version="2.24.0" />
-    <!-- 1.2.8 is the ElementTree module available in Gotham 
-         See http://mirrors.kodi.tv/addons/gotham/
+    <!-- 1.2.8 is the ElementTree module available in Gotham, see http://mirrors.kodi.tv/addons/gotham/
          NOTE Seems this is not needed in Kodi Jarvis
       -->
     <!-- <import addon="script.module.elementtree" version="1.2.8"/> -->
@@ -21,3 +20,4 @@
     <description lang="en">Multi-emulator front-end for Kodi scalable to collections of thousands of ROMs. Includes offline scrapers for MAME and No-Intro ROM sets and also supports scrapping ROM metadata and artwork online. ROM auditing for No-Intro ROMs using No-Intro XML DATs. Launching of games and standalone applications is also available.</description>
   </extension>
 </addon>
+
